--- a/styles/layout.css
+++ b/styles/layout.css
@@ -94,6 +94,7 @@ padding-top: 30px;
     margin-right: 20px;
 
 }
+/*кнопки*/
 .button24{
  color:#00c6ff;
  padding: 10px 20px;
@@ -357,12 +358,10 @@ body {
 }
 @media (min-width: 1024px)
 {
-  .lal,.description,.grid-1,.letters, {
-  display: flex;
-  flex-direction: column;
-}
+
+
     h1{
-      margin-top: 600px;
+      margin-top: 550px;
       font-size: 160px;
     }
     h2{
@@ -374,8 +373,8 @@ body {
     {
       display: grid;
       grid-template-columns: 1fr;
-      grid-template-rows: auto 200px 200px auto 200px 200px 200px auto 200px 200px auto;
-      grid-gap: 25px;
+      grid-template-rows: auto 300px 300px auto 300px 300px 300px auto 300px 300px auto;
+      grid-gap: 100px;
         grid: repeat(3, 1fr) / repeat(2, 1fr);
     }
     .lal
@@ -388,7 +387,7 @@ body {
     .tra
     {
         z-index: 1;
-        top: -600px;
+        top: -800px;
         left: -120px;
       position: relative;
     }
@@ -402,10 +401,10 @@ body {
     .tral
     {
         z-index: 3;
-        top: -950px;
-        left: 350px;
+        top: -1270px;
+        left: 490px;
       position: relative;
-        width: 400px;
+        width: 550px;
         margin-right: 20px;
     }
     .grid-1
